Featute: Add 'transaction' functionalities
