# model/transaction.go
@@ -1,0 +1,37 @@
+package model
+
+import "time"
+
+type Transaction struct {
+	ID          int                 `json:"id"`
+	TotalAmount int                 `json:"total_amount"`
+	CreatedAt   time.Time           `json:"created_at"`
+	Details     []TransactionDetail `json:"details"`
+}
+
+type TransactionDetail struct {
+	ID            int    `json:"id"`
+	TransactionID int    `json:"transaction_id"`
+	ProductID     int    `json:"product_id"`
+	ProductName   string `json:"product_name,omitempty"`
+	Quantity      int    `json:"quantity"`
+	Subtotal      int    `json:"subtotal"`
+}
+
+type CheckoutItem struct {
+	ProductID int `json:"product_id"`
+	Quantity  int `json:"quantity"`
+}
+
+type CheckoutRequest struct {
+	Items []CheckoutItem `json:"items"`
+}
+
+type SalesSummary struct {
+	TotalRevenue   int `json:"total_revenue"`
+	TotalTransaksi int `json:"total_transaksi"`
+	ProdukTerlaris struct {
+		Nama       string `json:"nama"`
+		QtyTerjual int    `json:"qty_terjual"`
+	} `json:"produk_terlaris"`
+}
